--- a/LechebnikProject/Views/AdminPanelWindow.xaml
+++ b/LechebnikProject/Views/AdminPanelWindow.xaml
@@ -7,12 +7,15 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label Content="ПАНЕЛЬ АДМИНИСТРАТОРА" Style="{StaticResource  MainHeader}"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <Label Content="ПАНЕЛЬ АДМИНИСТРАТОРА" Style="{StaticResource  MainHeader}"/>
+            <Image Source="/Resources/Own/LechebnikLogo-Mini.png" Height="50"/>
+        </StackPanel>
         <StackPanel Grid.Row="1" VerticalAlignment="Center">
-            <Button Content="Открыть управление пользователями" Command="{Binding ManageUsersCommand}" Style="{StaticResource Button}"/>
-            <Button Content="Открыть управление препаратами" Command="{Binding ManageMedicinesCommand}" Style="{StaticResource Button}"/>
-            <Button Content="Открыть управление отчётами" Command="{Binding ManageReportsCommand}" Style="{StaticResource Button}"/>
-            <Button Content="Вернуться к главному меню" Command="{Binding GoBackCommand}" Style="{StaticResource Button}"/>
+            <Button Content="ОТКРЫТЬ УПРАВЛЕНИЕ ПОЛЬЗОВАТЕЛЯМИ" Command="{Binding ManageUsersCommand}" Style="{StaticResource Button}"/>
+            <Button Content="ОТКРЫТЬ УПРАВЛЕНИЕ ПРЕПАРАТАМИ" Command="{Binding ManageMedicinesCommand}" Style="{StaticResource Button}"/>
+            <Button Content="ОТКРЫТЬ УПРАВЛЕНИЕ ОТЧЁТАМИ" Command="{Binding ManageReportsCommand}" Style="{StaticResource Button}"/>
+            <Button Content="ВЕРНУТЬСЯ К ГЛАВНОМУ МЕНЮ" Command="{Binding GoBackCommand}" Style="{StaticResource Button}"/>
         </StackPanel>
     </Grid>
 </Window>
