--- a/LechebnikProject/Views/EditMedicineWindow.xaml
+++ b/LechebnikProject/Views/EditMedicineWindow.xaml
@@ -1,13 +1,12 @@
-﻿<Window x:Class="LechebnikProject.Views.AddMedicineWindow"
+﻿<Window x:Class="LechebnikProject.Views.EditMedicineWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="clr-namespace:LechebnikProject.Helpers"
-        Title="ЛЕЧЕБНИК [окно добавления препарата]" Style="{StaticResource Window}" WindowStartupLocation="CenterScreen">
+        Title="ЛЕЧЕБНИК [окно изменения данных препарата]" Style="{StaticResource Window}" WindowStartupLocation="CenterScreen">
     <Grid Style="{StaticResource Grid}">
         <ScrollViewer>
             <StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Label Content="ДОБАВЛЕНИЕ ПРЕПАРАТА" Style="{StaticResource MainHeader}"/>
+                    <Label Content="ИЗМЕНЕНИЕ ДАННЫХ ПРЕПАРАТА" Style="{StaticResource MainHeader}"/>
                     <Image Source="/Resources/Own/LechebnikLogo-Mini.png" Height="50"/>
                 </StackPanel>
                 <Label Content="Препарат (название, лекарственная форма, вес/объём):" Style="{StaticResource MainText}"/>
@@ -39,7 +38,7 @@
                 <Label Content="Цена в рублях (отделите копейки запятой):" Style="{StaticResource MainText}"/>
                 <TextBox Text="{Binding Price}" Style="{StaticResource InputText}"/>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Button Content="ДОБАВИТЬ" Command="{Binding AddCommand}" Style="{StaticResource FuncButton}"/>
+                    <Button Content="СОХРАНИТЬ" Command="{Binding SaveCommand}" Style="{StaticResource FuncButton}"/>
                     <Button Content="ОТМЕНИТЬ" Command="{Binding GoToMainMenuCommand}" Style="{StaticResource FuncButton}"/>
                 </StackPanel>
             </StackPanel>
