--- a/LechebnikProject/Views/LoginWindow.xaml
+++ b/LechebnikProject/Views/LoginWindow.xaml
@@ -1,14 +1,17 @@
 ﻿<Window x:Class="LechebnikProject.Views.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ЛЕЧЕБНИК [окно авторизации]" Style="{StaticResource Window}" WindowStartupLocation="CenterScreen">
+        Title="ЛЕЧЕБНИК [окно аутентификации]" Style="{StaticResource Window}" WindowStartupLocation="CenterScreen">
     <Grid Style="{StaticResource Grid}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <Label Content="АВТОРИЗАЦИЯ СОТРУДНИКА" Style="{StaticResource MainHeader}"/>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <Label Content="АУТЕНТИФИКАЦИЯ СОТРУДНИКА" Style="{StaticResource MainHeader}"/>
+            <Image Source="/Resources/Own/LechebnikLogo-Mini.png" Height="50"/>
+        </StackPanel>
         <StackPanel Grid.Row="1">
             <Label Content="Логин:" Style="{StaticResource MainText}"/>
             <TextBox x:Name="LoginTextBox" Style="{StaticResource InputText}"/>
