--- a/LechebnikProject/Views/RegistrationWindow.xaml
+++ b/LechebnikProject/Views/RegistrationWindow.xaml
@@ -32,7 +32,7 @@
                 <Label Content="Введите код с изображения:" Style="{StaticResource MainText}"/>
                 <TextBox x:Name="CaptchaTextBox" Style="{StaticResource InputText}"/>
                 <Image Source="{Binding CaptchaImage}" Margin="10,5,0,10"/>
-                <StackPanel HorizontalAlignment="Center">
+                <StackPanel HorizontalAlignment="Center" Margin="10">
                     <Button Content="ЗАРЕГИСТРИРОВАТЬСЯ" Click="RegisterButton_Click" Style="{StaticResource Button}"/>
                     <Label Content="Если зарегистрированы, нажмите кнопку:" Style="{StaticResource Text}" HorizontalAlignment="Center"/>
                     <Button Content="АУТЕНТИФИЦИРОВАТЬСЯ" Click="LoginButton_Click" Style="{StaticResource Button}"/>
