--- a/LechebnikProject/Views/QuantityInputWindow.xaml
+++ b/LechebnikProject/Views/QuantityInputWindow.xaml
@@ -15,7 +15,7 @@
             <Label Content="Приобретаемый препарат:" Style="{StaticResource MainText}"/>
             <Label Content="{Binding SelectedMedicine.Name}" Style="{StaticResource Text}"/>
             <Label Content="Введите количество:" Style="{StaticResource MainText}"/>
-            <TextBox Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource InputText}"/>
+            <TextBox x:Name="QuantityTextBox" Text="{Binding Quantity, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource InputText}"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Content="Добавить в корзину" Command="{Binding ConfirmCommand}" Style="{StaticResource FuncButton}" Width="300"/>
                 <Button Content="Отменить добавление" Command="{Binding CancelCommand}" Style="{StaticResource FuncButton}" Width="300"/>
